--- a/src/AccountGoWeb/tsconfig.json
+++ b/src/AccountGoWeb/tsconfig.json
@@ -8,7 +8,8 @@
     "removeComments": true,
     "sourceMap": true,
     "outDir": "./wwwroot/libs/tsxbuild",
-    "rootDir": "./Scripts"
+    "rootDir": "./Scripts",
+    "experimentalDecorators": true
   },
   "compileOnSave": true,
   "exclude": [
