--- a/src/AccountGoWeb/project.json
+++ b/src/AccountGoWeb/project.json
@@ -14,7 +14,8 @@
     "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0",
     "Microsoft.Extensions.Logging": "1.0.0",
     "Microsoft.Extensions.Logging.Console": "1.0.0",
-    "Microsoft.Extensions.Logging.Debug": "1.0.0"
+    "Microsoft.Extensions.Logging.Debug": "1.0.0",
+    "Microsoft.Net.Http": "2.2.22"
   },
 
   "tools": {
