--- a/src/AccountGoWeb/package.json
+++ b/src/AccountGoWeb/package.json
@@ -20,6 +20,8 @@
     "d3": "latest",
     "react-router": "latest",
     "ag-grid": "latest",
-    "ag-grid-react": "latest"    
+    "ag-grid-react": "latest",
+    "knockout": "latest",
+    "knockout-mapping": "latest"
   }
 }
