--- a/src/Api/project.fragment.lock.json
+++ b/src/Api/project.fragment.lock.json
@@ -5,13 +5,13 @@
       "type": "project",
       "framework": ".NETFramework,Version=v4.6",
       "compile": {
-        "bin/Debug/Core.dll": {}
+        "bin/Release/Core.dll": {}
       },
       "runtime": {
-        "bin/Debug/Core.dll": {}
+        "bin/Release/Core.dll": {}
       },
       "contentFiles": {
-        "bin/Debug/Core.pdb": {
+        "bin/Release/Core.pdb": {
           "buildAction": "None",
           "codeLanguage": "any",
           "copyToOutput": true
@@ -22,13 +22,13 @@
       "type": "project",
       "framework": ".NETFramework,Version=v4.6",
       "compile": {
-        "bin/Debug/Dto.dll": {}
+        "bin/Release/Dto.dll": {}
       },
       "runtime": {
-        "bin/Debug/Dto.dll": {}
+        "bin/Release/Dto.dll": {}
       },
       "contentFiles": {
-        "bin/Debug/Dto.pdb": {
+        "bin/Release/Dto.pdb": {
           "buildAction": "None",
           "codeLanguage": "any",
           "copyToOutput": true
@@ -39,13 +39,13 @@
       "type": "project",
       "framework": ".NETFramework,Version=v4.6",
       "compile": {
-        "bin/Debug/Services.dll": {}
+        "bin/Release/Services.dll": {}
       },
       "runtime": {
-        "bin/Debug/Services.dll": {}
+        "bin/Release/Services.dll": {}
       },
       "contentFiles": {
-        "bin/Debug/Services.pdb": {
+        "bin/Release/Services.pdb": {
           "buildAction": "None",
           "codeLanguage": "any",
           "copyToOutput": true
