--- a/src/Dto/Dto.csproj
+++ b/src/Dto/Dto.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Financial\FiscalYear.cs" />
     <Compile Include="Financial\GeneralLedger.cs" />
     <Compile Include="Financial\JournalEntry.cs" />
+    <Compile Include="Financial\MasterGeneralLedger.cs" />
     <Compile Include="Financial\PaymentTerm.cs" />
     <Compile Include="Financial\TreeViewAccounts.cs" />
     <Compile Include="Inventory\InventoryControlJournal.cs" />
